Added UI for header

--- a/FEEAssignment/ClientApp/src/app/app.component.html
+++ b/FEEAssignment/ClientApp/src/app/app.component.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="http://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.26.1/css/mwf-west-european-default.min.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
   <app-header></app-header>
