--- a/FEEAssignment/ClientApp/src/app/header/header.component.html
+++ b/FEEAssignment/ClientApp/src/app/header/header.component.html
@@ -1,8 +1,42 @@
-<header class="cela-header">
-    <nav class="navbar navbar-expand-lg bg-white header-nav">
-        <a class="navbar-brand" href="#">
-            <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-            Bootstrap
-          </a>
-    </nav>
+<header class="header-parent">
+    <div data-grid="col-12">
+        <nav class="navbar navbar-expand-lg bg-white header-nav">
+            <div class="navbar-brand toggle-container header-brand">
+                <button class="navbar-toggler navbar-toggle-button nav-button rounded-0 border-0" type="button"
+                    data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarToggle"
+                    aria-label="Toggle navigation" [attr.aria-expanded]="isExpanded" (click)="toggle()">
+                    <span class="c-glyph" [ngClass]="{
+                'glyph-cancel': isExpanded,
+                'glyph-global-nav-button': !isExpanded
+              }"></span>
+                </button>
+                <a class="navbar-brand ml-2 ml-lg-0 header-brand" [routerLink]="['/']">
+                    <img id="logo" class="logo-image" alt="MAQ Software" src="../../assets/images/MAQSoftware.png" />
+                </a>
+                <div class="brand-separator d-none d-lg-inline" aria-hidden="true"></div>
+            </div>
+
+            <div class="collapse navbar-collapse" id="navbarToggle">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <div class="c-heading-5 x-p-t-4x">OND Priority - Develop Technical Expertise</div>
+                    </li>
+                    <li class="nav-item x-p-t-0x x-m-l-4x">
+                        <a class="nav-link" href="#"><i class="fa fa-home icon-size x-m-r-2x"
+                                aria-hidden="true"></i>Home<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item x-p-t-0x x-m-l-4x">
+                        <a class="nav-link" href="#"><i class="fa fa-book icon-size x-m-r-2x"
+                                aria-hidden="true"></i>Courses<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item x-p-t-0x x-m-l-4x">
+                        <a class="nav-link" href="#"><i class="fa fa-star icon-size x-m-r-2x"
+                                aria-hidden="true"></i>Features<span class="sr-only">(current)</span></a>
+                    </li>                   
+                </ul>
+                <a class="nav-link" href="#">My Account<i class="fa fa-user-circle-o icon-size x-m-l-2x"
+                    aria-hidden="true"></i><span class="sr-only">(current)</span></a>
+            </div>
+        </nav>
+    </div>
 </header>
