--- a/FEEAssignment/ClientApp/src/app/app.component.html
+++ b/FEEAssignment/ClientApp/src/app/app.component.html
@@ -2,9 +2,9 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
-  <app-header></app-header>
-  <div class="container">
+  <app-header *ngIf="userLoggedIn"></app-header>
+  <main id="mainContent" data-grid="container" class="full-height">
     <router-outlet></router-outlet>
-  </div>
-  <app-footer></app-footer>
+  </main>
+  <app-footer *ngIf="userLoggedIn"></app-footer>
 </body>
