Commit changes for features

--- a/FEEAssignment/ClientApp/src/app/feature/feature.component.html
+++ b/FEEAssignment/ClientApp/src/app/feature/feature.component.html
@@ -6,22 +6,22 @@
     <table data-f-sort="true">
         <thead>
             <tr>
-                <th id="featureName" scope="col" class="headertext" class= "f-sortable" colspan="1" aria-sort="ascending">
+                <th id="featureName" class="fas fa-caret-up" scope="col" class="headertext" class= "f-sortable" colspan="1" aria-sort="ascending">
                     <button>Feature Name</button>
                 </th>
                 <th id="description" scope="col" class="headertext" colspan="1" aria-sort="none">
                     <button>Description</button>
                 </th>
-                <th id="createdBy" scope="col" class="headertext" class= "f-sortable" colspan="1" aria-sort="ascending">
+                <th id="createdBy" class="fas fa-caret-up" class="f-sortable f-numerical" scope="col" class="headertext" class= "f-sortable" colspan="1" aria-sort="ascending">
                     <button>Created By</button>
                 </th>
-                <th id="createddate" scope="colgroup" class="headertext" class= "f-sortable" aria-sort="ascending">
+                <th id="createddate" class="fas fa-caret-up" class="f-sortable f-numerical"scope="colgroup" class="headertext" class= "f-sortable" aria-sort="ascending">
                     <button>Created Date</button>
                 </th>
-                <th id="lastupdatedby" scope="col" class="headertext" class= "f-sortable" colspan="1" aria-sort="ascending">
+                <th id="lastupdatedby" class="fas fa-caret-up" class="f-sortable f-numerical" scope="col" class="headertext" class= "f-sortable" colspan="1" aria-sort="ascending">
                     <button>Last Updated By</button>
                 </th>
-                <th id="lastupdateddate" scope="colgroup" class="headertext" class= "f-sortable" aria-sort="ascending">
+                <th id="lastupdateddate" class="fas fa-caret-up" class="f-sortable f-numerical" scope="colgroup" class="headertext" class= "f-sortable" aria-sort="ascending">
                     <button>Last Updated Date</button>
                 </th>
                 <th id="toggle" scope="colgroup" class="headertext" aria-sort="ascending">
