--- a/FEEAssignment/ClientApp/src/app/home/home.component.html
+++ b/FEEAssignment/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="home" *ngIf="!isLoading">
+<div class="home">
     <div class="row">
         <div class="col-lg-6">
             <section id="user-info">
