Commit Changes for diabling features for non admin

--- a/FEEAssignment/ClientApp/src/app/feature/feature.component.html
+++ b/FEEAssignment/ClientApp/src/app/feature/feature.component.html
@@ -30,197 +30,21 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
-            </tr>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
-            </tr>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
-            </tr>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
-            </tr>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
-            </tr>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
-            </tr>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
-            </tr>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
-            </tr>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
-            </tr>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
-            </tr>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
-            </tr>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
-            </tr>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
-            </tr>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
-            </tr>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
-            </tr>
-            <tr>
-                <td headers="featureName">Feature Name</td>
-                <td>Description</td>
-                <td>Creator</td>
-                <td>01/01/2020</td>
-                <td>Updater</td>
-                <td>01/01/2020</td>
-                <label class="switch">
-                    <input type="checkbox" style="color:Tomato;" >
-                    <span class="slider round"></span>
-                  </label>
+            <tr *ngFor="let feature of features">
+                <td headers="featureName">{{feature.featureName}}</td>
+                <td>{{feature.description}}</td>
+                <td>{{feature.createdBy}}</td>
+                <td>{{feature.createdDate}}</td>
+                <td>{{feature.lastUpdatedBy}}</td>
+                <td>{{feature.lastUpdatedDate}}</td>
+                <div class="c-toggle" *ngIf="canModify">
+                    <button id="example-1" name="example-1" role="checkbox" aria-checked="true" aria-labelledby="c-label-1 c-state-label-1"></button>
+                    <span data-on-string="On" data-off-string="Off" id="c-state-label-1">On</span>
+                </div>
+                <div class="c-toggle f-disabled" *ngIf="!canModify">
+                    <button id="example-4" name="example-4" role="checkbox" aria-checked="true" aria-labelledby="c-label-4 c-state-label-4" disabled="disabled"></button>
+                    <span data-on-string="On" data-off-string="Off" id="c-state-label-4">On</span>
+                </div>                                                                                                                                                                                                             
             </tr>
         </tbody>
     </table>
